Kubernetes-Manifests-file/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: 
  labels:
    role: frontend
    env: demo
spec: 
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels: 
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec: 
      containers:
      - name: frontend
        image:  yfhates/front-end:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
